--- a/styles/main.css
+++ b/styles/main.css
@@ -56,7 +56,7 @@ h1 {
   height: 60vh;
   width: 48vw;
   float: left;
-  border-top: 2px solid black;
+  border-top: 2px solid #7F8487;
   padding-top: 20px;
   letter-spacing: 1px;
 }
@@ -84,7 +84,7 @@ h1 {
   height: 60vh;
   width: 48vw;
   float:right;
-  border-top: 2px solid black;
+  border-top: 2px solid #7F8487;
   padding-top: 20px;
   letter-spacing: 1px;
   text-align: right;
@@ -107,7 +107,7 @@ h1 {
   height: 60vh;
   width: 48vw;
   float: left;
-  border-top: 2px solid black;
+  border-top: 2px solid #7F8487;
   padding-top: 20px;
   letter-spacing: 1px;
 }
@@ -126,7 +126,5 @@ h1 {
   font: 700 2vw 'Manrope', sans-serif;
   padding-top: 3vh;
   height: 8vh;
-  background-color: #ff5900;
-  margin-top: 3vh;
-  border-top: 2px solid black;
+  border-top: 2px solid #7F8487;
 }
