--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,7 @@
 }
 li {
   list-style: none;
+  float: left;
 }
 a {
   text-decoration: none;
@@ -11,7 +12,6 @@ a {
   display: block;
 }
 .topbar-container {
-  position: relative;
   width: 96vw;
   height: 7.1vh;
   margin: 0 auto;
@@ -22,10 +22,6 @@ a {
 	overflow: hidden;
   text-align: center;
 }
-.nav li {
-  list-style: none;
-  float: left;
-}
 .nav-link {
 	width: 24vw;
   font: 700 2vw 'Manrope', sans-serif;
@@ -35,96 +31,106 @@ a {
   margin-top: 2.5vh;
 }
 .header {
-  height: 29vh;
+  height: 200px;
   background-color: #ff5900;
+}
+@media screen and (max-width: 320px) {
+  .header {
+    height: 40px;
+    background-color: #ff5900;
+  }
+ }
+@media screen and (max-width: 768px) {
+  .header {
+    height: 100px;
+    background-color: #ff5900;
+ }
+}
+@media screen and (max-width: 1200px) {
+  .header {
+    height: 155px;
+    background-color: #ff5900;
+ }
 }
 h1 {
   font: 300 19vw 'Manrope', sans-serif;
   text-align: center;
 }
+h2 {
+  font: 700 3vw 'Manrope', sans-serif;
+  line-height: 100px;
+}
+p {
+  font: 300 2vw 'Manrope', sans-serif;
+  line-height: 45px;
+}
+@media screen and (max-width: 768px) {
+  p {
+    font: 300 2vw 'Manrope', sans-serif;
+    line-height: 25px;
+  }
+}
+img {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
 .mid-container {
   height: 30vh;
 }
-.tech-container {
-  position: relative;
+@media screen and (max-width: 768px) {
+  .mid-container {
+    height: 10vh;
+  }
+}
+.content-container {
   margin: 0 auto;
   height: 60vh;
   width: 96vw;
 }
-.tech-left {
-  font: 700 2vw 'Manrope', sans-serif;
-  height: 60vh;
+@media screen and (max-width: 768px) {
+  .content-container {
+    margin: 0 auto;
+    height: 30vh;
+    width: 96vw;
+  }
+}
+.blog {
   width: 48vw;
+  height: 59.8vh;
   float: left;
-  border-top: 2px solid #7F8487;
-  padding-top: 20px;
+  border-top: 0.2vh solid #7F8487;
   letter-spacing: 1px;
 }
-.tech-right {
-  float: right;
-}
-.tech-image {
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 60vh;
+.core-blog {
   width: 48vw;
-}
-.core-container {
-  position: relative;
-  margin: 0 auto;
-  height: 60vh;
-  width: 96vw;
-}
-.core-left {
+  height: 59.8vh;
   float: left;
-}
-.core-right {
-  font: 700 2vw 'Manrope', sans-serif;
-  height: 60vh;
-  width: 48vw;
-  float:right;
-  border-top: 2px solid #7F8487;
-  padding-top: 20px;
+  border-top: 0.2vh solid #7F8487;
   letter-spacing: 1px;
   text-align: right;
 }
-.core-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 60vh;
-  width: 48vw;
+@media screen and (max-width: 768px) {
+  .blog, .core-blog {
+    width: 96vw;
+    height: 40vh;
+    text-align: center;
+  }
 }
-.about-container {
-  position: relative;
-  margin: 0 auto;
-  height: 60vh;
-  width: 96vw;
-}
-.about-left {
-  font: 700 2vw 'Manrope', sans-serif;
-  height: 60vh;
+.image {
   width: 48vw;
+  height: 60vh;
   float: left;
-  border-top: 2px solid #7F8487;
-  padding-top: 20px;
-  letter-spacing: 1px;
 }
-.about-right {
-  float: right;
-}
-.about-image {
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 60vh;
-  width: 48vw;
+@media screen and (max-width: 768px) {
+  .image {
+  display: none;
+  }
 }
 .footer {
   text-align: center;
   font: 700 2vw 'Manrope', sans-serif;
   padding-top: 3vh;
   height: 8vh;
-  border-top: 2px solid #7F8487;
+  border-top: 0.2vh solid #7F8487;
 }
