--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,10 @@
   padding: 0;
   margin: 0;
 }
+body {
+  font-family:'Nunito', sans-serif;
+  font-size: 1.1em;
+}
 .nav li {
   list-style: none;
   float: left;
@@ -73,7 +77,6 @@ h4 {
   padding: 20px;
 }
 p {
-  font: 400 1.3em 'Manrope', sans-serif;
   text-align: left;
   line-height: 30px;
   padding: 5px 20px;
@@ -171,7 +174,6 @@ img {
 }
 .sprint-2-list, .control-flow {
   list-style: inside;
-  font: 400 1em 'Manrope', sans-serif;
   line-height: 30px;
 }
 
