--- a/styles/main.css
+++ b/styles/main.css
@@ -177,6 +177,23 @@ img {
   line-height: 30px;
 }
 
+.array-object-img {
+  height: 50%; 
+  width: 50%; 
+  margin: 0 auto; 
+  padding: 30px; 
+  display: block;
+}
+@media screen and (max-width: 1200px) {
+  .array-object-img {
+    height: 100%; 
+    width: 100%; 
+    margin: 0 auto; 
+    padding: 0; 
+    display: block;
+  }
+}
+
 /* -- STYLING FOR TABLE IN EMOTIONAL INTELLIGENCE -- */
 
 table {
